# ESP32-S3-LCD-7-TOUCH

./: .gitignore  README.md  configuracion_basica
main/: CMakeLists.txt  main.c
main/ui/: actions.c  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui_image_log_eez.c  ui_image_logo_lvgl.c  ui_image_my.c  vars.c  vars.h
